force-app/main/default/objects/Product_Distribution__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <formula>TEXT(Product__r.Product_Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the product house/division that the product belongs to.</inlineHelpText>
    <label>Product Division</label>
    <type>Text</type>
</CustomField>