force-app/main/default/objects/Product_Distribution__c/fields/Profit_Centre__c.field-meta.xml
<CustomField>
    <fullName>Profit_Centre__c</fullName>
    <description>The general ledger (GL) unit profit centre that the revenue/asset will be allocated to SGPRT-624</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; CASESAFEID(Product__r.Profit_Centre__c)  , Product__r.Profit_Centre__r.Name, &quot;_self&quot;)</formula>
    <inlineHelpText>The general ledger (GL) unit profit centre that the revenue/asset will be allocated to.</inlineHelpText>
    <label>Profit Centre</label>
    <type>Text</type>
</CustomField>