force-app/main/default/objects/Product_Distribution__c/fields/Remaining_Sell_Down__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Sell_Down__c</fullName>
    <formula>SB_Gross_Participation__c-Approved_Hold__c-Distribution_Amount_Achieved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Notional SB (underwrite) - Approved Hold - Sales closed to date</inlineHelpText>
    <label>Remaining Sell Down</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>