force-app/main/default/objects/Product_Distribution__c/fields/Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Risk_Grade__c</fullName>
    <description>The applicable transaction specific risk grade i.e. SB01-SB25/D1-D3
SGPRT-624</description>
    <formula>Product__r.Risk_Grade__c</formula>
    <inlineHelpText>The applicable transaction specific risk grade i.e. SB01-SB25/D1-D3</inlineHelpText>
    <label>Risk Grade</label>
    <type>Text</type>
</CustomField>