force-app/main/default/objects/Product_Distribution__c/fields/SB_Gross_Participation__c.field-meta.xml
<CustomField>
    <fullName>SB_Gross_Participation__c</fullName>
    <description>The amount that SB will be providing the client in relation to the specific facility (sum of the selldown and the amount SB will hold) SGPRT-1229</description>
    <formula>Product__r.SB_Gross_Participation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount that SB will be providing the client in relation to the specific facility (sum of the selldown and the amount SB will hold)</inlineHelpText>
    <label>SB Gross Participation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>