force-app/main/default/objects/Product_Distribution__c/fields/SB_Hold__c.field-meta.xml
<CustomField>
    <fullName>SB_Hold__c</fullName>
    <description>SB&apos;s credit approved hold amount in relation to the specific facility SGPRT-624</description>
    <formula>Product__r.SB_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SB&apos;s credit approved hold amount in relation to the specific facility</inlineHelpText>
    <label>SB Hold (at financial close)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>