force-app/main/default/objects/Product_Distribution__c/fields/SB_Hold_Post_financial_Close__c.field-meta.xml
<CustomField>
    <fullName>SB_Hold_Post_financial_Close__c</fullName>
    <description>SFP-8485 - SB’s credit approved hold amount in relation to the specific facility as updated post financial close.</description>
    <inlineHelpText>SB’s credit approved hold amount in relation to the specific facility as updated post financial close.</inlineHelpText>
    <label>SB Hold (post financial close)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>