force-app/main/default/objects/Product_Distribution__c/fields/SB_Sell_Down__c.field-meta.xml
<CustomField>
    <fullName>SB_Sell_Down__c</fullName>
    <description>The amount of SB&apos;s Gross Participation in the facility to be sold down post close SGPRT-624</description>
    <formula>Product__r.SB_Sell_Down__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of SB&apos;s Gross Participation in the facility to be sold down post close</inlineHelpText>
    <label>SB Sell Down (at financial close)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>