force-app/main/default/objects/Product_Distribution__c/fields/SB_Sell_Down_Post_Financial_Close__c.field-meta.xml
<CustomField>
    <fullName>SB_Sell_Down_Post_Financial_Close__c</fullName>
    <description>SFP-8485 - The amount of SB’s gross participation in the facility to be sold down as mandated post financial close.</description>
    <inlineHelpText>The amount of SB’s gross participation in the facility to be sold down as mandated post financial close.</inlineHelpText>
    <label>SB Sell Down (post financial close)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>