force-app/main/default/objects/Product_Distribution__c/fields/Secondary_Distribution_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Distribution_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual assisting on this deal/ if any</inlineHelpText>
    <label>Secondary Distribution Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secondary_Product_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>