force-app/main/default/objects/Product_Distribution__c/fields/Sell_Down_Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Sell_Down_Period_Date__c</fullName>
    <formula>IF
(
  NOT(ISNULL(Actual_Close_Date__c)), 
  DATE(
    YEAR(ADDMONTHS(Actual_Close_Date__c,Distribution_Period_Months__c)),
        MONTH(ADDMONTHS(Actual_Close_Date__c,Distribution_Period_Months__c)),
  IF(
    MONTH(ADDMONTHS(Actual_Close_Date__c,Distribution_Period_Months__c)) =12,
    31,
    DAY(
      DATE(
        YEAR(ADDMONTHS(Actual_Close_Date__c,Distribution_Period_Months__c)),
        MONTH(ADDMONTHS(Actual_Close_Date__c,Distribution_Period_Months__c))+1,
        1
      )-1
    )
    )
  ), 
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date by which the mandated amount should be sold.</inlineHelpText>
    <label>Sell Down Period Date</label>
    <type>Date</type>
</CustomField>