force-app/main/default/objects/Product_Distribution__c/fields/Set_Facility_Price__c.field-meta.xml
<CustomField>
    <fullName>Set_Facility_Price__c</fullName>
    <description>Set Price given by Arranger for debt syndication expressed in %
SGPRT-624</description>
    <formula>Product__r.Set_Facility_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set Price given by Arranger for debt syndication expressed in %</inlineHelpText>
    <label>Set Facility Price (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>