force-app/main/default/objects/Product_Distribution__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Opportunity Stage SGPRT-624</description>
    <formula>TEXT(Product__r.Opportunity__r.StageName)</formula>
    <inlineHelpText>Opportunity Stage</inlineHelpText>
    <label>Stage</label>
    <type>Text</type>
</CustomField>