force-app/main/default/objects/Product_Distribution__c/fields/Term_Tenor_months__c.field-meta.xml
<CustomField>
    <fullName>Term_Tenor_months__c</fullName>
    <formula>Product__r.Term_Tenor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Term of underlying facility, in integer months</inlineHelpText>
    <label>Term / Tenor (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>