force-app/main/default/objects/Product_Distribution__c/fields/Total_Distribution_Parties_Closed__c.field-meta.xml
<CustomField>
    <fullName>Total_Distribution_Parties_Closed__c</fullName>
    <description>The amount trade was closed at with each investor for the portion of the sell down that relates to the specific distribution method OR the amount trade was closed at with the seller
SGPRT-624</description>
    <inlineHelpText>The amount trade was closed at with each investor for the portion of the sell down that relates to the specific distribution method OR the amount trade was closed at with the seller</inlineHelpText>
    <label>Total Distribution Parties Closed</label>
    <summarizedField>Investor_Participation__c.Distribution_Party_Closed__c</summarizedField>
    <summaryForeignKey>Investor_Participation__c.Distribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>