force-app/main/default/objects/Product_Distribution__c/fields/Total_Margin_bps__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_bps__c</fullName>
    <description>Total Margin above applicable funding base rate expressed in bps. It is the sum of 1. Liquids (bps), 2. Reserving (bps) and 3. Clean Credit Margin (bps) 
SGPRT-624</description>
    <formula>Product__r.Margin_pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Margin above applicable funding base rate expressed in bps. It is the sum of 1. Liquids (bps), 2. Reserving (bps) and 3. Clean Credit Margin (bps)</inlineHelpText>
    <label>Total Margin (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>