force-app/main/default/objects/Product_Distribution__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Indicate the context in which the transaction is taking place. SGPRT-624</description>
    <formula>TEXT(Product__r.Transaction_Type__c )</formula>
    <inlineHelpText>Indicate the context in which the transaction is taking place</inlineHelpText>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>