force-app/main/default/objects/Product_Distribution__c/fields/Underwrite_Fee_bps__c.field-meta.xml
<CustomField>
    <fullName>Underwrite_Fee_bps__c</fullName>
    <description>The fee earned by SB for the risk of acting as an Underwriter in this transaction (including est. participation fee). Full upfront fee expressed in bps. SGPRT-624</description>
    <formula>Product__r.Underwrite_Fee_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The fee earned by SB for the risk of acting as an Underwriter in this transaction (including est. participation fee). Full upfront fee expressed in bps</inlineHelpText>
    <label>Underwrite Fee (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>