force-app/main/default/objects/Product_Distribution__c/fields/Weighted_Average_Life_months__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Life_months__c</fullName>
    <description>Weighted Average Life for the facility in months
SGPRT-624</description>
    <formula>Product__r.Weighted_Average_Life_months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weighted Average Life for the facility in months</inlineHelpText>
    <label>Weighted Average Life (months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>