force-app/main/default/objects/Product_Distribution__c/listViews/Active_Product_Distribution.listView-meta.xml
<ListView>
    <fullName>Active_Product_Distribution</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Facility_Size__c</columns>
    <columns>SB_Sell_Down__c</columns>
    <columns>Mandated_Distribution_Close_Date__c</columns>
    <columns>Distribution_Status__c</columns>
    <columns>Distribution_Method__c</columns>
    <columns>Distribution_Amount__c</columns>
    <columns>Distribution_Amount_Achieved__c</columns>
    <columns>Distribution_Amount_in_Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distribution_Status__c</field>
        <operation>contains</operation>
        <value>Extension Provided,On Hold,On Track,Overdue</value>
    </filters>
    <label>Active Product Distribution</label>
</ListView>